--- a/netty-producer/pom.xml
+++ b/netty-producer/pom.xml
@@ -22,12 +22,12 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.6.Final</version>
+            <version>4.1.47.Final</version>
         </dependency>
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
-            <version>${zookeeper.version}</version>
+            <version>3.4.14</version>
         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
